# spanish-app

./: .env.example  .gitignore  AGENTS.md  PLAN.md
backend/: pyproject.toml
backend/app/: config.py  crud.py  curriculum.py  main.py  models.py  schemas.py  srs.py
backend/app/routers/: conversation.py  lessons.py  placement.py  users.py  vocab.py
backend/tests/: test_api.py
bot/: config.py  image_gen.py  telegram_bot.py
deploy/: spanish-backend.service  spanish-bot.service
